# langchain-movie-recommender

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
cli/: main.py
movie_recommender/: cli.py  data_sources.py  indexer.py  llm.py  main.py  tools.py  vectorstore.py
notebooks/: 01_RAG.ipynb
src/movie_indexer/: __init__.py  config.py  data_sources.py  indexer.py  main.py
src/movie_recommender/: __init__.py  cli.py  config.py  llm.py  tools.py
tests/: conftest.py  test_data_sources.py  test_llm.py
