[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-movie-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.3",
    "langchain-postgres>=0.0.16",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
]

[project.scripts]
movie-recommender = "movie_recommender.cli:cli"
movie-recommender-debug = "movie_recommender.cli:cli_debug"

[tool.hatch.build.targets.wheel]
packages = ["src/movie_recommender"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
    "ty>=0.0.1a26",
    "uv>=0.9.11",
]
